<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.wsg.xsybbs.view.DefaultTopBar
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_forget_password"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:layout_marginTop="300dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_email"
        android:layout_below="@+id/tv_forget"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/btn_forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/sure"
        android:textColor="@android:color/white"
        android:layout_below="@+id/et_email"
        android:layout_margin="20dp"/>


</RelativeLayout>