<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginBottom="30dp"
        android:src="@mipmap/logo"
        app:civ_border_color="@android:color/white"
        app:civ_border_width="2dp" />


    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/edittext_bg"
        android:hint="用户名"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:hint="密码"
        android:inputType="numberPassword"
        android:paddingLeft="10dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:orientation="vertical">


    </LinearLayout>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/bt_registered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg"
        android:text="@string/register"
        android:textColor="@android:color/white" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/tv_tourist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tourist_login"
            android:paddingLeft="10dp"
            android:textColor="@color/colorAccent" />



        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/forget_password"
            android:textColor="@color/colorAccent" />


    </LinearLayout>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingTop="30dp"
        android:layout_marginLeft="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/third_login"
            android:textSize="20sp" />

        <ImageView

            android:id="@+id/btnLogin_qq"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:clickable="false"
            android:src="@mipmap/third_login_qq" />

        <ImageView

            android:id="@+id/btnLogi_wechart"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:clickable="false"
            android:src="@mipmap/third_login_wechart" />

        <ImageView

            android:id="@+id/btnLogi_qq"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:clickable="false"
            android:src="@mipmap/third_login_weibo" />


    </LinearLayout>


</LinearLayout>