<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">

        <RelativeLayout
            android:id="@+id/note_layout_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/home_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/note_pressed" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/home_image_view"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:text="@string/home_image_view_text"
                android:textColor="@color/color_333333"
                android:textSize="16sp"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/friend_layout_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            >

            <TextView
                android:id="@+id/fish_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/friends"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fish_image_view"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:text="@string/my_friend"
                android:textColor="@color/color_333333"
                android:textSize="16sp"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/message_layout_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/message_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/message"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/message_image_view"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:text="@string/my_message"
                android:textColor="@color/color_333333"
                android:textSize="16sp"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mine_layout_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/mine_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/mine"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mine_image_view"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:text="@string/mine_center"
                android:textColor="@color/color_333333"
                android:textSize="16sp"
                />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/linearLayout"
        android:background="@color/color_333333"
        />
</RelativeLayout>